[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 1.0
margin_top = 494.892
margin_right = 1022.0
margin_bottom = 572.892

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1014.0
margin_bottom = 71.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 959.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="NameText" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
margin_right = 891.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Person's Name:"

[node name="SpeakingText" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 891.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HI THIS IS THE DEFAULT TEXT! WHAT'S UP?"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 963.0
margin_right = 1007.0
margin_bottom = 64.0

[node name="Button" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 44.0
margin_bottom = 20.0
text = "NEXT"
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
